<resources>
    <string name="app_name">好借贷借款</string>
    <string name="home_tab_home">首页</string>
    <string name="home_tab_loan">借款</string>
    <string name="home_tab_self">我的</string>
    <string name="net_error">网络错误</string>
    <string name="all_loan">全部贷款</string>
    <string name="loan_detail">借款详情</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login_username_hint">请输入您的账号</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="register">注册</string>
    <string name="login_now">立即登录</string>
    <string name="my_loan">我的借款</string>
    <string name="my_recommendation">我的推荐</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出</string>
    <string name="apply_info">申请人信息</string>
    <string name="apply_qualification">申请人资质</string>
    <string name="apply_result">申请结果</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="phone_num_error">非法的手机号</string>
    <string name="input_empty">输入不能为空</string>
    <string name="apply_successful">申请成功</string>
    <string name="apply_failed">申请失败</string>
    <string name="apply_cancel_alert">申请中返回，数据将丢失！</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="to_login">未登录,是否登录?</string>
    <string name="login_failed">登录失败</string>
    <string name="about_us_str">湖北恒信融创投资管理有限公司是一家具有上市公司背景的金融服务公司，公司运营着专注房产理财产品的金融服务平台——好借贷。好借贷运营团队由具有金融投资、风险管理和软件开发等领域的专业人士组成。好借贷运营团队由具有金融投资、风险管理和软件开发等领域的专业人士组成。平台秉承“让借款更简单，让投资更安全”的理念，为借款方和投资者提供全方位的专业金融服务。</string>
    <string name="about_borrow">关于好借贷</string>
    <string name="phone_num">手&#160;&#160;机&#160;&#160;号</string>
    <string name="input_phone_hint">请输入您的手机号</string>
    <string name="login_password">登录密码</string>
    <string name="input_password_hint">请输入您的密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_confirm_password_hint">请再次输入您的密码</string>
    <string name="verification_code">验&#160;&#160;证&#160;&#160;码</string>
    <string name="invite_code">邀&#160;&#160;请&#160;&#160;码</string>
    <string name="select">选填</string>
    <string name="confirm">确认</string>
    <string name="password_error">密码不合法:6-32个字母或数字任意组合，区分大小写;32个字符之间。</string>
    <string name="verify_password_error">两次密码不一致</string>
    <string name="reset_password">重置密码</string>
    <string name="new_password" >新&#160;&#160;密&#160;&#160;码</string>
    <string name="password_empty">密码不能为空</string>
    <string name="phone_num_or_password_empty">手机号和密码不能为空!</string>
    <string name="unknow_error">未知错误</string>
    <string name="click_twice_exit">再按一次退出程序</string>
    <string name="data_errror">接受到的数据错误</string>
    <string name="check_update">检查更新</string>
    <string name="can_not_find_version_name">不能获取当前版本号</string>
    <string name="version_name">当前版本v</string>
    <string name="apply_loan">申请贷款</string>
    <string name="update">更新</string>
    <string name="update_info">新版本发布，修复bug，运行更流畅</string>
    <string name="version_update">版本更新</string>
    <string name="downloading">下载中</string>
    <string name="latest_version">已是最新版本</string>
    <string name="confim_cancel">确认要取消借款申请吗</string>
    <string name="user_info">个人中心</string>
    <string name="login_later">稍后登录</string>
</resources>
