<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_margin="00dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/phone_num"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_phone_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/color_text_hint"
            android:textSize="18.0sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/round_progress_bar_def_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50.0dip">

        <TextView
            android:id="@+id/text_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/verification_code"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_easty"
            android:singleLine="true"
            android:text="@string/get_verification_code"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="150dp"
            android:layout_toRightOf="@id/text_code"
            android:background="@null"
            android:focusable="true"
            android:hint="请输入验证码"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/color_text_hint"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/round_progress_bar_def_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_margin="00dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/new_password"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/color_text_hint"
            android:textSize="18.0sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/round_progress_bar_def_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_margin="00dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/confirm_password"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/input_confirm_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/color_text_hint"
            android:textSize="18.0sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/round_progress_bar_def_color" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/border_easty"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>