<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableLeft="@drawable/drowbowloginphone"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|left"
            android:hint="@string/login_username_hint"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_text_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_username"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/color_divider" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/img_bt"
            android:background="@null"
            android:drawableLeft="@drawable/drowborloginpass"
            android:drawablePadding="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|left"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_text_hint"></EditText>

        <ToggleButton
            android:id="@+id/tb_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/et_password"
            android:background="@android:color/transparent"
            android:button="@drawable/my_toggle_button"
            android:checked="false"
            android:textOff=""
            android:textOn="" />

        <View
            android:id="@+id/my_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/color_divider" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_easty"
        android:scaleType="centerCrop"
        android:text="@string/login"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/resetPassWrod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />
    </RelativeLayout>
</LinearLayout>